plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.damKemon'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.jsoup:jsoup:1.18.3'

	// Jackson — JSON-LD parsing in GenericProductExtractor
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	// jsr310 — serialize LocalDateTime fields when caching DTOs to Redis (CacheConfig)
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// Caffeine — in-process cache used for /api/search response caching
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	// Playwright — headless browser for JS-rendered sites (Daraz, Walton)
	implementation 'com.microsoft.playwright:playwright:1.50.0'

	// JWT for user-account session tokens (HMAC, no external service)
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// BCrypt for the owner-password hash
	implementation 'org.springframework.security:spring-security-crypto'

	compileOnly 'org.projectlombok:lombok'
	// `developmentOnly` keeps DevTools off the bootJar runtime classpath,
	// so production containers don't get auto-restart-on-classpath-change.
	// Critical for crons: the indexer is scheduled at 03:00; in dev each
	// DevTools restart resets the scheduler, which is why catalog data
	// went stale during long edit sessions. Don't move this to a wider
	// scope without first reading the cron section of the README.
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}
